# Calculadora24H

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/tradeiros/: core.py
