[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeiros"
version = "0.1.0"
description = "HedgeModePro core + Streamlit app"
authors = [
  { name="Tradeiros Dev Team", email="example@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
